# qemu-macos-user

./: IMPLEMENTATION_SUMMARY.md  configure  meson.build
.github/workflows/: README.md  build-macos-user.yml
common-user/host/aarch64/: safe-syscall.inc.S
configs/targets/: aarch64-macos-user.mak
macos-user/: README.md  mach_traps.c  machload.c  main.c  meson.build  mmap.c  plugin-api.c  qemu.h  signal-common.h  signal.c  strace.c  strace.h  syscall.c  syscall_defs.h  trace-events  trace.h  uaccess.c  user-internals.h
macos-user/aarch64/: meson.build  signal.c  target_arch.h  target_arch_cpu.h  target_arch_signal.h  target_syscall.h
macos-user/include/: special-errno.h
scripts/: entitlement.sh
stubs/: cpu-get-clock.c
tests/macos-user/: test_cli_tools.py
tests/macos-user/asm/: arithmetic.s  bitwise.s  conditional.s  echo_stdin.s  exit42.s  factorial.s  getpid.s  hello.s  large_write.s  loop_sum.s  memfill.s  multi_write.s  stack_ops.s  write_stderr.s
tests/macos-user/csrc/: args_c.c  env_c.c  exit_code.c  hello_c.c  math_c.c  stderr_c.c
tests/macos-user/csrc_bins/: hello_c
